<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SILK Checklist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">Silk User Login</string>
    <string name="title_load_data">Load Checklist Data</string>
    <string name="title_main">Silk Checklist</string>
    <string name="lbl_silk_user">Silk User :</string>
    <string name="lgl_silk_password">Password :</string>
    <string name="lbl_btn_login">Login</string>
    <string name="msg_login_error">Invalid user or password, Please try again.</string>
    <string name="action_logout">Logout</string>
    <string name="action_update">Update</string>
    <string name="title_activity_main">โปรแกรมตรวจประเมิน</string>
    <string name="title_sheet_item_list">รายการตรวจประเมิน</string>
    <string name="title_activity_audit_detail">Audit details</string>
    <string name="title_fragment_regulation">ข้อกำหนด</string>
    <string name="title_regulation_item">ข้อกำหนด</string>
    <string name="title_checklist_item">รายการตรวจประเมิน</string>
    <string name="yes">สอดคล้อง</string>
    <string name="no">ไม่สอดคล้อง</string>
    <string name="title_activity_audit_sheet">การตรวจประเมิน</string>
    <string name="lbl_remark">หมายเหตุ</string>
    <string name="lbl_remark_choices">ข้อผิดพลาด</string>
    <string name="title_activity_sheet_item_detail">Sheet item detail</string>
    
    <string name="menu_delete">Delete</string>
    
</resources>
