<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tvRegulationItemTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_regulation_item"
            android:gravity="center"
            android:background="#555"
            android:textColor="#fff"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/tvRegulationItemValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRegulationItemTitle"
            android:text="Regulation Item Value"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvRegulationItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRegulationItemValue"
            android:text="Regulation Item Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" >
		<TextView
            android:id="@+id/tvChecklistItemTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_checklist_item"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:background="#555"
            android:textColor="#fff"
            android:textAppearance="?android:attr/textAppearanceLarge" />
		
        <TextView
            android:id="@+id/txtChecklistItemValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtChecklistItemName"
            android:layout_below="@+id/switch1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtChecklistItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtChecklistItemValue"
            
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/tvChecklistItemTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:enabled="false"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:textOff="@string/no"
            android:textOn="@string/yes" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/lbl_remark"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtRemarkChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/lvRemarkChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp"
        android:choiceMode="multipleChoice" >
    </ListView>

</LinearLayout>